Fixed the stupid tooltip flickering bug

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -244,6 +244,7 @@ button.nav-link.active {
 
 .tooltip {
     max-width: 500px;
+    pointer-events: none;
 }
 
 .tooltip-inner {
